--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,13 +1,13 @@
 .page {
   margin: 0 auto;
   padding: 45px 0 60px;
-  max-width: 68.75%;
+  max-width: 880px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
 }
 
-@media screen and (max-width: 927px) {
+@media screen and (max-width: 917px) {
   .page {
     padding: 28px 0 36px;
     max-width: 100%;
