--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,4 +1,9 @@
 .body {
   font-family: 'Inter', Arial, sans-serif;
   background-color: #000000;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 }
