--- a/blocks/element/__description/element__description.css
+++ b/blocks/element/__description/element__description.css
@@ -1,5 +1,5 @@
 .element__description {
-  margin: 23px 15px 0 21px;
+  margin: 21px 15px 27px 21px;
   display: flex;
   justify-content: space-between;
   align-items: center;
