--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,8 +1,8 @@
 .elements {
   margin-top: 50px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 282px);
-  grid-auto-rows: 361px;
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(min-content, max-content));
   column-gap: 17px;
   row-gap: 20px;
   justify-content: center;
