--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -9,6 +9,12 @@
   padding: 0;
   align-self: center;
   margin-right: 5px;
+  transition: opacity .3s ease;
+}
+
+.element__like-button:hover {
+  opacity: .5;
+  cursor: pointer;
 }
 
 .element__like-button:active {
