feat: доделал адаптив

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -2,7 +2,6 @@
   font-weight: 400;
   margin: 0;
   padding: 0;
-  margin-top: 7px;
   font-size: 18px;
   line-height: 22px;
 }
@@ -12,6 +11,6 @@
     font-size: 14px;
     line-height: 17px;
     text-align: center;
-    margin-top: 6px;
+    margin-left: 16px;
   }
 }
