--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,7 @@
 .profile__info {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  row-gap: 9px;
   max-width: 336px;
   flex-wrap: wrap;
   margin-left: 30px;
@@ -10,6 +12,7 @@
   .profile__info {
     max-width: 282px;
     justify-content: center;
+    row-gap: 7px;
     margin: 26px 0 32px;
   }  
 }
