--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,8 +1,14 @@
 .content {
   max-width: 100%;
   margin-top: 40px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
