--- a/blocks/element/__description/element__description.css
+++ b/blocks/element/__description/element__description.css
@@ -1,7 +1,14 @@
 .element__description {
   margin: 21px 15px 27px 21px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
