--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -7,8 +7,11 @@
   border: none;
   margin: 0;
   padding: 0;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
   align-self: center;
   margin-right: 5px;
+  -webkit-transition: opacity .3s ease;
   transition: opacity .3s ease;
 }
 
