--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,10 +1,16 @@
 .elements {
   margin-top: 50px;
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(-webkit-min-content, -webkit-max-content));
   grid-template-rows: repeat(auto-fit, minmax(min-content, max-content));
+  -webkit-column-gap: 17px;
+  -moz-column-gap: 17px;
   column-gap: 17px;
   row-gap: 20px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   color: #000;
 }
