--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,11 @@
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   padding-bottom: 41px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
