--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,8 +2,14 @@
   margin: 0 auto;
   padding: 45px 0 60px;
   max-width: 880px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
