--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -4,13 +4,18 @@
   padding: 0;
   font-size: 18px;
   line-height: 22px;
+  max-width: 294px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 917px) {
   .profile__description {
+    max-width: 189px;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
-    margin-left: 16px;
+    margin-left: 26px;
   }
 }
