--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -5,10 +5,15 @@
   font-size: 42px;
   line-height: 48px;
   margin-right: 19px;
+  max-width: 294px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 917px) {
   .profile__title {
+    max-width: 189px;
     font-size: 27px;
     line-height: 33px;
     text-align: center;
