--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,11 +7,14 @@
   border: none;
   padding: 0;
   margin: 0;
+  align-self: center;
+  margin-top: 8px;
 }
 
 @media screen and (max-width: 917px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
+    margin-top: 4px;
   }
 }
