--- a/blocks/element/__description/element__description.css
+++ b/blocks/element/__description/element__description.css
@@ -1,5 +1,5 @@
 .element__description {
-  margin: 21px 15px 27px 21px;
+  margin: 0 15px 27px 21px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
