--- a/pages/index.css
+++ b/pages/index.css
@@ -32,3 +32,5 @@
 @import url(../blocks/popup/__user-about/popup__user-about.css);
 @import url(../blocks/popup/__button-submit/popup__button-submit.css);
 @import url(../blocks/popup/__reset-button/popup__reset-button.css);
+@import url(../blocks/popup/__place-title/popup__place-title.css);
+@import url(../blocks/popup/__image-link/popup__image-link.css);
