refactor: Разметка index.html и readme

--- a/pages/index.css
+++ b/pages/index.css
@@ -36,6 +36,7 @@
 @import url(../blocks/popup/__place-title/popup__place-title.css);
 @import url(../blocks/popup/__image-link/popup__image-link.css);
 @import url(../blocks/popup/_zoom-image/popup_zoom-image.css);
+@import url(../blocks/popup/__figure-container/popup__figure-container.css);
 @import url(../blocks/popup/__figure/popup__figure.css);
 @import url(../blocks/popup/__figcaption/popup__figcaption.css);
 @import url(../blocks/popup/__image/popup__image.css);
