--- a/blocks/popup/__figcaption/popup__figcaption.css
+++ b/blocks/popup/__figcaption/popup__figcaption.css
@@ -4,6 +4,6 @@
   line-height: 15px;
   font-weight: 400;
   padding-top: 10px;
-  ms-flex-item-align: start;
+  -ms-flex-item-align: start;
   align-self: flex-start;
 }
