--- a/blocks/popup/__image-link/popup__image-link.css
+++ b/blocks/popup/__image-link/popup__image-link.css
@@ -1,9 +1,3 @@
 .popup__image-link {
-  margin-bottom: 48px;
-}
-
-@media screen and (max-width: 917px) {
-  .popup__image-link {
-    margin-bottom: 45px;
-  }
+  margin-top: 13px;
 }
