--- a/blocks/popup/__fieldset/popup__fieldset.css
+++ b/blocks/popup/__fieldset/popup__fieldset.css
@@ -2,6 +2,11 @@
   border: none;
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
