--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -1,7 +1,7 @@
 .popup__title {
   margin: 0;
   padding: 0;
-  margin-bottom: 54px;
+ /* margin-bottom: 54px; */
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
@@ -12,6 +12,5 @@
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    margin-bottom: 75px;
   }
 }
